Add dashboards for users
